[package]
name = 'onebm'
description = 'Single binary manager'
version = '0.0.1'
edition = '2021'
authors = ['Blair Noctis <code@noctis.im>']
license = 'BSD-3-Clause'
homepage = 'https://github.com/bnoctis/1bm'
repository = 'https://github.com/bnoctis/1bm'

[[bin]]
name = '1bm'
path = 'src/main.rs'

[dependencies]
argh = '0.1.7'
base16ct = { version = '0.1.1', features = ['alloc'] }
bytes = '1.1.0'
home = '0.5.3'
minisign-verify = '0.2.1'
once_cell = '1.12.0'
regex = '1.5.6'
reqwest = { version = '0.11.10', features = ['blocking', 'json', 'gzip'] }
semver = '1.0.10'
serde = { version = '1.0.137', features = ['derive'] }
serde_json = '1.0.81'
sha2 = '0.10.2'
thiserror = '1.0.31'

